--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
             <a class="nav-link" href="/login">Login |</a>
           </li>
           <li class="nav-item" id="logout">
-            <a class="nav-link text-dark" id="logout">Logout |</a>
+            <a class="nav-link" id="logout">Logout |</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/newPost" id="NewPost">New Post</a>
